Fix: Read only HTML_TEXT in a section put all content in a row overflowing the screen

--- a/OpenXavaTest/web/xava/style/base.css
+++ b/OpenXavaTest/web/xava/style/base.css
@@ -2447,3 +2447,19 @@ div[id$="_Index__view"] .ox-list-title {
 	max-height: 30px;
 }
 
+.ox-read-only-html-text {
+    white-space: break-spaces;
+}
+
+
+.ox-read-only-html-text p {
+	margin-top: -15px;
+}
+
+.ie .ox-read-only-html-text {
+    white-space: pre-wrap;
+}
+
+.ie .ox-read-only-html-text p {
+	margin-top: -5px;
+}
